--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "tsc --watch"
+  },
   "devDependencies": {
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
